--- a/gradle.properties
+++ b/gradle.properties
@@ -3,20 +3,20 @@ org.gradle.daemon=false
 
 # Project
 version=0.0.1-ALPHA
-group=net.xstopho.examplemod
+group=net.xstopho.resource_furnaces
 java_version=21
 modrinth_id=
 curseforge_id=
 
 # Common
 minecraft_version=1.21.1
-mod_name=Example Mod
+mod_name=Resource Furnaces
 mod_author=xStopho
-mod_id=examplemod
+mod_id=resource_furnaces
 mod_license=MIT
 mod_credits=
-mod_description=Example description with \nmultiline support!
-minecraft_version_range=[1.21, 1.22)
+mod_description=Adds different Tiers of Furnaces.
+minecraft_version_range=[1.21, 1.21.2)
 
 neoform_version=1.21.1-20240808.144430
 parchment_mc_version=1.21.1
@@ -27,7 +27,7 @@ fabric_loader_version=0.16.9
 fabric_api_version=0.110.0
 
 # NeoForge
-neoforge_version=21.1.80
+neoforge_version=21.1.90
 neoforge_version_range=[21,)
 
 # Forge
